# aegis

./: .gitignore  Cargo.toml  PLAN.md  README.md  flake.nix  fozzy.toml  install.sh
assets/js/: aegis_runtime.js
docs/: agent-control.md
native/: CMakeLists.txt  aegis_app.cc  aegis_app.h  aegis_bootstrap.h  aegis_browser_host_mac.inc  aegis_browser_host_mac.mm  aegis_client.cc  aegis_client.h  aegis_messages.h  aegis_native_mac.h  aegis_native_mac.mm  aegis_native_main.cc  aegis_platform_linux.cc  aegis_platform_mac.mm  aegis_runtime_script.h  aegis_state_paths.cc  aegis_state_paths.h  process_helper_linux.cc  process_helper_mac.cc
native/include/: aegis_cef_host.hpp  aegis_host_abi.h  aegis_platform.h  aegis_protocol.hpp
native/mac/: Info.plist.in  helper-Info.plist.in
native/mac/English.lproj/: InfoPlist.strings
native/src/: aegis_cef_host.cpp  aegis_protocol.cpp
scripts/: bootstrap_linux_native.sh  build-web-ui.sh  generate_runtime_header.py  host_backed_smoke.sh  install_local_release.sh  measure_startup.py  run_fozzy_full.sh  verify_local_release.sh
src/: browser.rs  browser_import.rs  config_store.rs  display.rs  lib.rs  main.rs  native.rs  state.rs  transfers.rs
src/api/: chrome.rs  mod.rs  server.rs  ui.rs
src/client/: mod.rs
src/commands/: command.rs  encoder.rs  matcher.rs  mod.rs
src/dom/: diff.rs  mod.rs  node.rs  tree.rs
src/events/: stream.rs
src/host/: mod.rs
src/runtime/: executor.rs  scheduler.rs
src/session/: cookies.rs  mod.rs  profile.rs  storage.rs
src/trace/: recorder.rs  replayer.rs
src/transport/: bridge.rs  protocol.rs
tests/: aegis_core.fozzy.json  aegis_host_backed.fozzy.json  aegis_native_doctor.fozzy.json  aegis_native_server_main_state_config_executor_explore.fozzy.json  aegis_native_server_main_state_config_executor_fail_shrink.fozzy.json  aegis_native_server_main_state_config_executor_host_memory_fuzz.fozzy.json  runtime_flow.rs
web-ui/: index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.tsx  icons.tsx  tokens.ts  vite-env.d.ts
web-ui/src/components/: AddressBar.tsx  BrowserChrome.tsx  NavigationButtons.tsx  PageTransition.tsx  ProgressBar.tsx  RemoteViewport.tsx  Separator.tsx  TabStrip.tsx  Toolbar.tsx
web-ui/src/hooks/: useChromeState.ts  useNavigation.ts
web-ui/src/styles/: global.css
